--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,22 @@
     "ignore": []
   },
   "types": "lib/",
+  "dependencies": {
+    "@feathersjs/configuration": "^4.5.12",
+    "@feathersjs/errors": "^4.5.12",
+    "@feathersjs/express": "^4.5.14",
+    "@feathersjs/feathers": "^4.5.12",
+    "@feathersjs/socketio": "^4.5.14",
+    "@feathersjs/transport-commons": "^4.5.14",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "feathers-mongoose": "^8.5.1",
+    "helmet": "^4.6.0",
+    "mongodb-core": "^3.2.7",
+    "mongoose": "^6.8.0",
+    "serve-favicon": "^2.5.0",
+    "winston": "^3.8.2"
+  },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
@@ -47,14 +63,13 @@
     "@typescript-eslint/parser": "^5.36.2",
     "axios": "^1.2.1",
     "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.1.2",
-    "mongoose": "^6.8.0",
+    "prettier": "^2.8.1",
     "shx": "^0.3.4",
     "ts-jest": "^29.0.3",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "mongodb-core": "^3.2.7"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.4"
   }
 }
