--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "target": "es2020",
     "module": "commonjs",
     "outDir": "./lib",
     "rootDir": "./src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": ["./src/types/"],
+    "noImplicitAny": false
   },
-  "exclude": [
-    "test"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["test"]
 }
