--- a/node/package.json
+++ b/node/package.json
@@ -22,13 +22,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
+    "shx": "^0.3.4",
     "tsconfig-paths": "^4.1.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@feathersjs/feathers": "^4.5.15",
     "@feathersjs/socketio-client": "^4.5.15",
+    "axios": "^1.2.1",
     "bunyan": "^1.8.15",
+    "date-fns": "^2.29.3",
     "dotenv-flow": "^3.2.0",
     "lodash": "^4.17.21",
     "socket.io-client": "^2.x",
