--- a/server/package.json
+++ b/server/package.json
@@ -48,10 +48,12 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-mongoose": "^8.5.1",
+    "feathers-swagger": "^2.0.0",
     "helmet": "^4.6.0",
     "mongodb-core": "^3.2.7",
     "mongoose": "^6.8.0",
     "serve-favicon": "^2.5.0",
+    "swagger-ui-dist": "^4.15.5",
     "winston": "^3.8.2"
   },
   "devDependencies": {
